# lots-of-pages

./: .gitignore  Cargo.toml
src/: file.html  gen.rs  logger.rs  main.rs
