[package]
name = "scanme"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.30"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
strfmt = "0.2.4"
